# minecraft-client-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: client.rs  lib.rs  main.rs  message.rs  mod.rs
tests/: integration_test.rs
