[package]
name = "minecraft-client-rs"
version = "0.1.0"
authors = ["Will Roberts"]
edition = "2018"
description = "A client for the Minecraft RCON protocol."
license = "GPL-3.0-or-later"

[features]
cli = ["dep:clap", "dep:regex"]

[dependencies]
clap = { version = "3.2", features = ["derive"], optional = true }
regex = { version = "1.6", optional = true }
